name:                joshuap-xmonad
version:             0.1.0.0
author:              Joshua Wood
maintainer:          josh@joshuawood.net
build-type:          Simple
cabal-version:       >=1.10

executable joshuap-xmonad
  hs-source-dirs:      .
  main-is:             xmonad.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , X11>=1.8
                     , taffybar>=0.4.6
                     , xmonad-contrib>=0.13
                     , xmonad>=0.13
  default-language: Haskell2010
