name:                joshuap-taffybar
version:             0.1.0.0
author:              Joshua Wood
maintainer:          josh@joshuawood.net
build-type:          Simple
cabal-version:       >=1.10

executable joshuap-taffybar
  hs-source-dirs:      .
  main-is:             taffybar.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , containers
                     , directory
                     , filepath
                     , gtk3
                     , gtk-traymanager>=0.1.6
                     , taffybar
                     , xmonad-contrib>=0.13
                     , X11>=1.8
  default-language:    Haskell2010
